--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ant-design-vue": "^1.4.10",
     "buefy": "^0.8.8",
     "core-js": "^3.4.3",
+    "eslint-config-eslint": "^5.0.1",
     "node-fetch": "^2.6.0",
     "vue": "^2.6.10"
   },
@@ -20,7 +21,7 @@
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^5.2.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
